--- a/MVPFirst.xcodeproj/xcshareddata/xcschemes/MVPFirst.xcscheme
+++ b/MVPFirst.xcodeproj/xcshareddata/xcschemes/MVPFirst.xcscheme
@@ -26,8 +26,19 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "FA2A202D258A8CEB00979956"
+               BuildableName = "MVPFirstUnitTests.xctest"
+               BlueprintName = "MVPFirstUnitTests"
+               ReferencedContainer = "container:MVPFirst.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
